--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
             type="submit"
             id="html"
           >
-            Swipe to see details!
+            <span class="container-day__button-text"
+              >Swipe to see details!</span
+            >
           </button>
         </div>
       </container>
@@ -125,7 +127,9 @@
             type="submit"
             id="html"
           >
-            Swipe to see details!
+            <span class="container-night__button-text"
+              >Swipe to see details!</span
+            >
           </button>
         </section>
       </container>
@@ -187,7 +191,9 @@
             type="submit"
             id="html"
           >
-            Swipe to see details!
+            <span class="container-cloudiness__button-text"
+              >Swipe to see details!</span
+            >
           </button>
         </section>
       </container>
