--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <div>Night</div>
             <div>...</div>
             <div
-              class="container-cloudiness__figure-small container-global_color-sun-cloudiness"
+              class="container-cloudiness__figure-small container-global_color-sun"
             ></div>
           </section>
 
@@ -198,5 +198,25 @@
         </section>
       </container>
     </container>
+
+    <script type="module" src="main.js"></script>
+
+    <script>
+      // alert('Увага!!!');
+      console.log('hello');
+      // console.log(prompt('Enter your age', 1 + 4));
+      var number = 5;
+      console.log(number);
+      var number = 5 + 1;
+      console.log(number);
+
+      const foo = 'Day';
+      console.log(foo);
+
+      let baz = true;
+      console.log(baz);
+      baz = false;
+      console.log(baz);
+    </script>
   </body>
 </html>
